# c2

./: .gitignore  Cargo.toml  DELIVERABLES.md  README.md  test-local.sh
c2-client/: Cargo.toml
c2-client/src/: client.rs  config.rs  main.rs
c2-proto/: Cargo.toml
c2-proto/src/: crypto.rs  framing.rs  lib.rs  messages.rs
c2-server/: Cargo.toml
c2-server/src/: commands.rs  config.rs  handler.rs  main.rs  session.rs
configs/: client.toml  server.toml
deployments/: DEPLOYMENT.md  c2-server.service
prompts/: impl.md
