[package]
name = "c2-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
c2-proto = { path = "../c2-proto" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
hex = "0.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
